--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=laptopshop
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=laptopshop;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=241204
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
