--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,17 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!--Add Connect MySQL-->
+		<!--Add Connect SQLSever-->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<version>9.4.1.jre8</version>
+		</dependency>
+
+		<!--Add Bảo mật Security-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
